fix: add Java 17 JVM flags for local Flink 2.x execution
- Add jvm-opts-java17.sh with official Flink --add-opens/--add-exports flags
- Add run-sample.sh generic launcher that applies flags automatically
- Update README: Java 17 prerequisite, use run-sample.sh in all examples
- Remove data-generator-specific run script (covered by generic one)